--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -257,14 +257,14 @@
     "    year = item.date[:4]\n",
     "    \n",
     "    md = \"---\\ntitle: \\\"\"   + item.title + '\"\\n'\n",
-    "    md += \"collection: talks\" + \"\\n\"\n",
+    "    md += \"collection: achievements\" + \"\\n\"\n",
     "    \n",
     "    if len(str(item.type)) > 3:\n",
     "        md += 'type: \"' + item.type + '\"\\n'\n",
     "    else:\n",
     "        md += 'type: \"Talk\"\\n'\n",
     "    \n",
-    "    md += \"permalink: /talks/\" + html_filename + \"\\n\"\n",
+    "    md += \"permalink: /achievements/\" + html_filename + \"\\n\"\n",
     "    \n",
     "    if len(str(item.venue)) > 3:\n",
     "        md += 'venue: \"' + item.venue + '\"\\n'\n",
@@ -289,7 +289,7 @@
     "    md_filename = os.path.basename(md_filename)\n",
     "    #print(md)\n",
     "    \n",
-    "    with open(\"../_talks/\" + md_filename, 'w') as f:\n",
+    "    with open(\"../_achievements/\" + md_filename, 'w') as f:\n",
     "        f.write(md)"
    ]
   },
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -319,12 +319,12 @@
     }
    ],
    "source": [
-    "!ls ../_talks"
+    "!ls ../_achievements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -352,7 +352,7 @@
     }
    ],
    "source": [
-    "!cat ../_talks/2013-03-01-tutorial-1.md"
+    "!cat ../_achievements/2013-03-01-tutorial-1.md"
    ]
   }
  ],
